# Intent

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.CN.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.CN.md  README.md  README_CN.md  SKILL.CN.md  SKILL.md  SKILL_CN.md  app.js  index.html  install.ps1  install.sh  itt  pyproject.toml
.claude/: instructions.md  settings.json
.claude/commands/: itt.md
.claude/hooks/: post-commit-remind.sh  session-start.sh
.github/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SECURITY_CN.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_CN.md  feature_request.md  feature_request_CN.md
.github/workflows/: ci.yml  pages.yml  release-inthub-local.yml
api/v1/: projects.json
api/v1/decisions/: wks_showcase_intent-legacy__decision-001.json  (+22 more)
apps/: __init__.py
apps/inthub_api/: __init__.py  __main__.py  common.py  db.py  ingest.py  queries.py  server.py  store.py
apps/inthub_local/: __init__.py  __main__.py  launcher.py
apps/inthub_web/: __init__.py  __main__.py  server.py
docs/: README.CN.md  README.EN.md  README.md  agent-improvement-proposals.md  agent-integration.md  cli-contract.md  cli-design.md  cli.CN.md  cli.EN.md  cli.md  demo.CN.md  demo.EN.md  demo.md  dogfooding.CN.md  dogfooding.md  glossary.CN.md  glossary.EN.md  glossary.md  i18n.CN.md  i18n.EN.md  intent_cli_design_spec_v_0_4_cn.md  intent_cli_implementation_contract_v_0.md  intent_vision_notes_v_3_cn.md  roadmap.CN.md  roadmap.EN.md  roadmap.md  vision.CN.md  vision.EN.md  vision.md
docs/CN/: README.md  cli.md  demo.md  distribution.md  dogfooding.md  feedback.md  glossary.md  i18n.md  inthub-local.md  inthub-mvp.md  inthub-sync-contract.md  release-notes-template.md  release.md  roadmap.md  strategy.md  structure.md  vision.md
docs/EN/: README.md  cli.md  demo.md  distribution.md  dogfooding.md  feedback.md  glossary.md  i18n.md  inthub-local.md  inthub-mvp.md  inthub-sync-contract.md  release-notes-template.md  release.md  roadmap.md  strategy.md  structure.md  vision.md
pages/: app.js  config.json
releases/: intent-v1.4.0.json  v1.4.0.json  v1.5.0.json  v1.6.0.json  v1.7.0.json  v1.8.0.json  v2.0.0.json  v2.1.0.json
scripts/: build_inthub_local.py  build_pages.py  check.sh  demo_agent.sh  demo_history.sh  demo_log.sh  install.sh  migrate_fields.py  smoke.sh  update_showcase.py
setup/: README.md  install.sh  manifest.json
setup/claude/: SKILL.md
setup/cursor/: README.md  intent.mdc
skills/: git-intent.md
skills/git-intent/: SKILL.md
skills/intent-cli/: SKILL.md
src/intent_cli/: __init__.py  __main__.py  cli.py  constants.py  core.py  distribution.py  errors.py  git.py  helpers.py  origin.py  output.py  render.py  snippets.py  store.py
tests/: conftest.py  test_cli.py  test_inthub_api_server.py  test_inthub_local.py  test_origin.py
(+901 files in other folders)
