[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-cli"
version = "0.2.0rc1"
description = "Intent CLI"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://github.com/dozybot001/Intent"
Repository = "https://github.com/dozybot001/Intent"

[project.scripts]
itt = "intent_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
