[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-intent"
version = "0.5.0"
description = "Semantic history for agent-driven development. Records what you did and why."
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Zeng Deyang" },
]
keywords = ["agent", "git", "semantic-history", "intent", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/dozybot001/Intent"
Repository = "https://github.com/dozybot001/Intent"

[project.scripts]
itt = "intent_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
